# veist

./: .gitignore  Cargo.toml  README.md
resources/: veistlogo.txt
src/: main.rs
src/api/: app_auth.rs  client.rs  mod.rs
src/db/: mod.rs
src/display/: utils.rs
