[package]
name = "veist"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
structopt = { version = "0.3", default-features = true }
serde = { version = "1.0" }
serde_json = { version = "1.0" }
lazy_static = { version = "1.4" }
log = "0.4.14"
env_logger = "0.9"
colored = "2.0"
